2023-02-15 0.22f
  * fixed error message: no space left on device
  * bar-index: fixed remove duplicate storges
  * BARControl: fixed edit serve maintenance time (locale)
  * BARControl: fixed update file lists

2023-01-15 0.22e
  * fixed PostgreSQL memory consumption: use single
    row mode
  * fixed memory leak

2022-12-25 0.22d
  * fixed memory leak in PostgreSQL API call
  * add missing lock slave list
  * fixed valgrind warning
  * fixed format error messages with arguments
  * fixed format some log lines
  * fixed full-text-search matching for SQLite
  * fixed SQLite database locking when new storage
    is inserted
  * fixed configuration issue handling: report as
    error
  * fixed memory leak in --transform

2022-11-15 0.22c
  * fixed trigger pairing thread
  * fixed memory leaks

2022-11-06 0.22b
  * fixed slave mode: avoid reading local jobs
  * fixed typing error when deleting entries in index
  * fixed warnings
  * improved timeout messages
  * fixed print configuration error messages
  * fixed reading keys/certificates: after configuration
  * fixed write multiple configuration values
  * removed some debug code
  * BARControl: fixed update TLS state

2022-10-31 0.22a
  * disabled TLS port by default (TLS also work on
    standard port)
  * fixed/renamed archive meta field "scheduleUUID":
    become a unique entity UUID to be able to find all
    archive belonging to a backup set.
    Note: if needed, e. g. for re-import to the index,
    run the command 'convert' with new option
    --new-entity-uuid on the archives which belong to
    a single entity
  * support TLS connections to slaves
  * fixed option --job
  * fixed convert multiple archives
  * fixed add newest entry if no entry exists
  * bar-index: fixed clean orphaned
  * fixed rename entry on restore: use file name instead
    of path
  * fixed --transform: glob,regex,extended pattern types
  * fixed missing source parallel.c in source pckage,
    fixed linkage